--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,11 @@
 {
   "home": "Home",
   "projects": "Projects",
-  "contact": "Contact"
+  "contact": "Contact",
+  "individual": "Individual",
+  "collaborative": "Collaborative",
+  "projectDescription": {
+    "yamoriDesign": "Personal design system implementation used for my web projects.",
+    "papuApp": "Small start-up project aimed to improve orders management for small restaurants."
+  }
 }
