--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -1,5 +1,11 @@
 {
   "home": "ホームページ",
   "projects": "プロジェクト",
-  "contact": "連絡"
+  "contact": "連絡",
+  "individual": "個人",
+  "contributing": "協力",
+  "projectDescription": {
+    "yamoriDesign": "TODO Personal design system implementation used for my web projects.",
+    "papuApp": "TODO Small start-up project aimed to improve orders management for small restaurants."
+  }
 }
