--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -14,9 +14,9 @@
     "individual": "個人",
     "contributing": "協力",
     "projectDescription": {
-      "yamoriDesign": "TODO Personal design system implementation used for my web projects.",
-      "localChess": "TODO Local Chess implementation.",
-      "papuApp": "TODO Small start-up project aimed to improve orders management for small restaurants."
+      "yamoriDesign": "私のウェブプロジェクトには自分のデザイン制度の実行です。",
+      "localChess": "ローカルモードで働いて簡単なチェスゲームの実行です。",
+      "papuApp": "小さいなレストランの注文の制度のためウェブアプリケーションです。"
     }
   },
   "contactSection": {
