--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,7 +16,7 @@
     "projectDescription": {
       "yamoriDesign": "Personal design system implementation used for my web projects.",
       "localChess": "Simple chess game implementation working in local mode.",
-      "papuApp": "Small start-up project aimed to improve orders management for small restaurants."
+      "papuApp": "Web application aimed to improve orders management for small restaurants."
     }
   },
   "contactSection": {
