Update packages and use new components

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,7 +12,7 @@
   "projectsSection": {
     "title": "My Projects",
     "individual": "Individual",
-    "collaborative": "Collaborative",
+    "contributing": "Contributing",
     "projectDescription": {
       "yamoriDesign": "Personal design system implementation used for my web projects.",
       "localChess": "Simple chess game implementation working in local mode.",
