--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -15,7 +15,8 @@
     "contributing": "協力",
     "projectDescription": {
       "yamoriDesign": "私のウェブプロジェクトには自分のデザイン制度の実行です。",
-      "localChess": "ローカルモードで働いて簡単なチェスゲームの実行です。",
+      "localChess": "ローカルモードで働いてチェスゲームの実行です。",
+      "issuedRecipes": "GitHub Issues からレシピを見せるウェブサイトです。",
       "papuApp": "小さいなレストランの注文の制度のためウェブアプリケーションです。"
     }
   },
