--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,6 +17,7 @@
       "yamoriDesign": "Personal design system implementation used for my web projects.",
       "localChess": "Chess game implementation working in local mode.",
       "issuedRecipes": "Website showing recipes saved as GitHub issues.",
+      "dsaSolutions": "Preview of my Data Structures and Algorithms problems code solutions.",
       "papuApp": "Web application aimed to improve orders management for small restaurants."
     }
   },
