--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -17,6 +17,7 @@
       "yamoriDesign": "私のウェブプロジェクトには自分のデザイン制度の実行です。",
       "localChess": "ローカルモードで働いてチェスゲームの実行です。",
       "issuedRecipes": "GitHub Issues からレシピを見せるウェブサイトです。",
+      "dsaSolutions": "私のデータ構造とアルゴリズムの問題解決コードのプレビュー",
       "papuApp": "小さいなレストランの注文の制度のためウェブアプリケーションです。"
     }
   },
